ready to test first deploy

--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -10,7 +10,12 @@
 		"lint": "prettier --check ."
 	},
 	"dependencies": {
+		"@doist/todoist-api-typescript": "^6.0.0",
+		"@openrouter/ai-sdk-provider": "^1.2.0",
 		"@r8y/db": "*",
+		"ai": "^5.0.86",
+		"discord.js": "^14.24.2",
+		"googleapis": "^164.1.0",
 		"neverthrow": "^8.2.0",
 		"zod": "^4.1.12"
 	},
