--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -5,7 +5,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "bun --watch src/index.ts",
-		"build": "bun build src/index.ts --outfile dist/index.js",
+		"build": "bun build src/index.ts",
+		"start": "bun run dist/index.js",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
