fixed deploy shit

--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "bun --watch src/index.ts",
 		"build": "bun build src/index.ts",
-		"start": "bun run dist/index.js",
+		"start": "bun run ./dist",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
 	},
