--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "turbo run lint",
     "clean": "find . -type d \\( -name \"node_modules\" -o -name \"dist\" -o -name \"build\" -o -name \".turbo\" -o -name \".svelte-kit\" \\) -prune -exec rm -rf {} + 2>/dev/null || true",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "build:web": "turbo run build --filter @r8y/sv-web",
+    "build:worker": "turbo run build --filter @r8y/bun-worker",
+    "start:web": "bun --filter @r8y/sv-web start",
+    "start:worker": "bun --filter @r8y/bun-worker start"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
