--- a/apps/bun-worker/package.json
+++ b/apps/bun-worker/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "bun --watch src/index.ts",
-		"build": "bun build src/index.ts --outdir dist",
+		"build": "bun build src/index.ts --outdir dist --target bun",
 		"start": "bun run ./dist",
 		"format": "prettier --write .",
 		"lint": "prettier --check ."
