--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -40,6 +40,7 @@
 		"tailwindcss": "^4.1.14",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
-		"vite": "^7.1.10"
+		"vite": "^7.1.10",
+		"vite-plugin-devtools-json": "^1.0.0"
 	}
 }
