starting the effecting

--- a/packages/channel-sync/package.json
+++ b/packages/channel-sync/package.json
@@ -20,6 +20,7 @@
 		"@openrouter/ai-sdk-provider": "^1.2.0",
 		"ai": "^5.0.87",
 		"discord.js": "^14.24.2",
+		"effect": "^3.19.5",
 		"googleapis": "^164.1.0",
 		"neverthrow": "^8.2.0",
 		"zod": "^4.1.12"
