--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -7,7 +7,7 @@
 		"dev": "bunx --bun vite dev",
 		"build": "bunx --bun vite build",
 		"preview": "bunx --bun vite preview",
-		"start": "bun run ./build",
+		"start": "PORT=8080 bun run ./build",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.553.0",
+		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.17",
