--- a/apps/sv-web/package.json
+++ b/apps/sv-web/package.json
@@ -15,6 +15,8 @@
 		"lint": "prettier --check ."
 	},
 	"dependencies": {
+		"@effect/platform": "^0.93.3",
+		"@effect/platform-bun": "^0.84.0",
 		"@r8y/db": "*",
 		"effect": "^3.19.6",
 		"mode-watcher": "^1.1.0",
@@ -25,7 +27,6 @@
 	"devDependencies": {
 		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.544.0",
-		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.49.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.17",
